2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-emacs.el: New file.

	* mi-elisp.el (toplevel): Add autoload for
	`find-function-search-for-symbol'.  Remove useless autoloads.
	(mode-info-elisp-titles): Change default value.  Refer
	`mode-info-title-types' as its type.
	(mode-info-elisp-function-document-1): Use
	`find-function-search-for-symbol' instead
	of`find-function-noselect'.
	(mode-info-elisp-variable-document-1): Removed.
	(variable-document): Not call the above function.
	(read-tag, find-tag-noselect): Reimplemented.
	(mode-info-elisp-add-function-button): Relax the regular
	expression to detect other buttons.
	(mode-info-elisp-add-variable-button): Ditto.

	* mi-config.el (toplevel): Add autoloads.
	(mode-info-with-help-buffer): New macro.
	(mode-info-elisp-add-function-button): Use the above macro.
	(mode-info-elisp-add-variable-button): Ditto.
	(mode-info-elisp-add-command-button): New advice.
	(mode-info-emacs-command-node): New option.
	(mode-info-emacs-command-node): New advice.

2002-07-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.0.3.

	* mode-info.el (toplevel): Add autoload for functions defined in
	etags.el.
	(function-document, variable-document): Changed the spec of its
	return value.
	(mode-info-show-document): Follow the above change.
	(mode-info-goto-info-entry-1): Ditto.
	(read-tag, find-tag-noselect, find-tag-internal): New method.
	(mode-info-find-tag): New command.

	* mi-util.el (mode-info-defgeneric): Changed error signal.

	* mi-elisp.el (toplevel): Add autoload for functions of
	find-func.el.
	(mode-info-elisp-function-document-1): New inline function.
	(function-document): Call the above function.
	(mode-info-elisp-variable-document-1): New inline function.
	(variable-document): Call the above function.
	(read-tag, find-tag-noselect): New method.

	* mi-config.el (toplevel): Add autoload for `mode-info-find-tag'.

	* elisp-comp.in (toplevel): Install workaround to suppress